--- a/config.properties
+++ b/config.properties
@@ -2,6 +2,6 @@ GRID=no
 GRID_URL=https://oauth-goudajyoti226-058de:c83ca060-24c9-47c2-8172-993a5cd8c6c6@ondemand.eu-central-1.saucelabs.com:443/wd/hub
 #GRID_URL=http://192.168.1.3:4444
 BROWSER=chrome
-APP_URL=http://www.fb.com
+APP_URL=https://pos.aksharatraining.in/pos/public/
 ITO=9
 ETO=6
